using cljx, finally seeing it work in the browser

--- a/resources/public/demo.html
+++ b/resources/public/demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+    <div id="hairball-mount"></div>
     <script src="js/out/goog/base.js"></script>
     <script src="js/main.js"></script>
     <script type="text/javascript">
