updating dependencies and moving demo.cljs into the examples directory

--- a/examples/sandbox/index.html
+++ b/examples/sandbox/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div id="hairball-mount"></div>
-    <script src="js/out/goog/base.js"></script>
-    <script src="js/main.js"></script>
-    <script type="text/javascript">
-        goog.require('hairball.demo');
-    </script>
+	<div id="hairball-mount"></div>
+	<script src="out/goog/base.js"></script>
+	<script src="main.js"></script>
+	<script type="text/javascript">
+			goog.require('hairball.example.main');
+	</script>
 </body>
 </html>
